--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "biosdisk-0.75-2.tar.gz": 26e7e840d49b9834b7cc84bc5e57ba743d2b3c7c
+  biosdisk-1.01.tar.gz: 111a4d2d95fb42803b85d47bf872ba701c618686
